--- a/Final-project.ipynb
+++ b/Final-project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "70670cf2-da9c-4bb6-a7cf-1aebc4cd50a7",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4be5a564",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "33efd70c",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b2dccd65",
    "metadata": {},
    "outputs": [
@@ -296,8 +296,9 @@
        "max      1.44     4.45    2.27    2.49    1.17  "
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ad043435",
    "metadata": {},
    "outputs": [
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dc2338b6",
    "metadata": {},
    "outputs": [],
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "16f353ca",
    "metadata": {},
    "outputs": [
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "85279af9",
    "metadata": {},
    "outputs": [
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bd301624",
    "metadata": {},
    "outputs": [
@@ -501,13 +502,362 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "efa3f7cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.3, random_state=1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97bb177b-1db7-4981-a56f-62f7496d888e",
+   "metadata": {},
+   "source": [
+    "9. For this analysis, we selected logistic regression and random forest as our classifiers. Logistic regression was chosen because is well-suited for binary classification tasks like this one. Random forest was selected as a second method because it can capture more complicated relationships through its decision trees. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16522f5c-af07-4c1f-8ff3-211b679d361a",
+   "metadata": {},
+   "source": [
+    "10. We chose accuracy and F1 as methods to compare classifier performance.\n",
+    " - Accuracy measures the proportion of correct predictions and is computed as (TP + TN) divided by the total number of predictions.\n",
+    " - The F1 score is calculated as 2TP/(2TP+FP+FN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f784fa2-ce8a-4f6d-b5c5-f338e3115c72",
+   "metadata": {},
+   "source": [
+    "11. Training "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7713c5b0-eac6-4a82-a7c0-3718b76d3dc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression\n",
+      "Accuracy: 0.833\n",
+      "F1 Score: 0.805\n",
+      "Optimal probability cutoff: 0.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "# logistic regression \n",
+    "\n",
+    "# fit and predict the model \n",
+    "log1 = LogisticRegression(max_iter=120)\n",
+    "log1.fit(X_train, y_train.values.ravel())\n",
+    "pred_probabilities = log1.predict_proba(X_test)\n",
+    "predicted_probability = log1.predict_proba(X_test)[:, 1]\n",
+    "y_pred = (predicted_probability >= 0.63).astype(int)\n",
+    "\n",
+    "# calculate the true and false positives from confusion matrix\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
+    "\n",
+    "sensitivity = tp / (tp + fn)\n",
+    "specificity = tn / (tn + fp)\n",
+    "accuracy = (tp + tn) / (tp + tn + fp + fn)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "# output results\n",
+    "print(\"Logistic Regression\")\n",
+    "print(f\"Accuracy: {accuracy:.3f}\")\n",
+    "print(f\"F1 Score: {f1:.3f}\")\n",
+    "\n",
+    "# get optimal probaiblity cutoff\n",
+    "fpr, tpr, thresholds = roc_curve(y_test, predicted_probability)\n",
+    "j_statistic = tpr - fpr\n",
+    "optimal_index = np.argmax(j_statistic)\n",
+    "optimal_threshold = thresholds[optimal_index]\n",
+    "\n",
+    "print(f\"Optimal probability cutoff: {optimal_threshold:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a994f9e-a8e2-4ac4-b538-100c554a6409",
+   "metadata": {},
+   "source": [
+    "The second model we fitted was a random forest classifier with paramters of 100 trees."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3c1c6b91-3574-4fac-98fb-aa0ee49d5cf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest\n",
+      "Accuracy: 0.889\n",
+      "F1 Score: 0.875\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random forest\n",
+    "# fit the and predict the model \n",
+    "heart_disease = RandomForestClassifier (\n",
+    "    n_estimators = 100,\n",
+    "    random_state=1, \n",
+    "    bootstrap=True, \n",
+    "    oob_score=True,\n",
+    "    criterion='gini')\n",
+    "\n",
+    "heart_disease.fit(X_train, y_train.values.ravel())\n",
+    "y_pred = heart_disease.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy and f1 score\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Random Forest\")\n",
+    "print(f\"Accuracy: {accuracy:.3f}\")\n",
+    "print(f\"F1 Score: {f1:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb158364-8b25-416a-b968-b20c830a0caa",
+   "metadata": {},
+   "source": [
+    "12. We chose to apply ellastic net to the logistic regression classifier. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "02790ec0-9c6a-4574-9ac8-056ac4c52b7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elastic Net Feature Selection\n",
+      "Accuracy: 0.878\n",
+      "F1 Score: 0.857\n"
+     ]
+    }
+   ],
+   "source": [
+    "enet_cv = LogisticRegressionCV(\n",
+    "    penalty='elasticnet',\n",
+    "    solver='saga',              # required for elasticnet\n",
+    "    l1_ratios=[0.1, 0.5, 0.9],  # l1_ratios (alpha in the lectures)\n",
+    "    Cs=10,                      # number of C values to try (or pass a list) - 1/lambda\n",
+    "    cv=5,\n",
+    "    max_iter=10000,\n",
+    "    scoring='accuracy',\n",
+    "    refit=True)\n",
+    "enet_cv.fit(X_train, y_train.values.ravel())\n",
+    "\n",
+    "m_enet = LogisticRegression(\n",
+    "    penalty='elasticnet',\n",
+    "    solver='saga',\n",
+    "    C=enet_cv.C_[0],              # best C from cross-validation (1/lambda)\n",
+    "    l1_ratio=enet_cv.l1_ratio_[0],# best l1_ratio from cross-validation\n",
+    "    max_iter=10000)\n",
+    "y_pred = m_enet.fit(X_train, y_train.values.ravel()).predict(X_test)\n",
+    "f1_2 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "m_enet_pre = m_enet.predict(X_test)\n",
+    "print(\"Elastic Net Feature Selection\")\n",
+    "print(\"Accuracy:\",round(accuracy_score(y_test.values.ravel(), m_enet_pre),3))\n",
+    "print(\"F1 Score:\",round(f1_2,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e55d0fc0-a204-4af6-bcc8-25d9e73182ea",
+   "metadata": {},
+   "source": [
+    "13. After training and testing the models, the random forest achieved an accuracy of 88.9% and an f1 score of 87.5%, outperforming logistic regression, which scored 83.3% accuracy and an 80.5% f1 score. This is a signifant difference because it means 5.2% more patients are correcty diagnosed under random forest. After applying a feature selection, the model performances between the two methods equalize and the logistic regression acheives an accuracy of 87.8% and an f1 score of 87.5%. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b748a4-e535-42c2-87b9-33688b740741",
+   "metadata": {},
+   "source": [
+    "14. For the best interpretable model identified in (13), analyze and interpret the most important predictor variables in the context of the classification challenge (at least two statements)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4bcb1f65-9106-409f-9277-75242bc084a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Coefficient</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>age</td>\n",
+       "      <td>0.054013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sex</td>\n",
+       "      <td>0.329586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cp</td>\n",
+       "      <td>0.324235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>trestbps</td>\n",
+       "      <td>0.175039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>chol</td>\n",
+       "      <td>0.054157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>fbs</td>\n",
+       "      <td>-0.140907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>restecg</td>\n",
+       "      <td>0.139418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>thalach</td>\n",
+       "      <td>-0.281434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>exang</td>\n",
+       "      <td>0.275582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>oldpeak</td>\n",
+       "      <td>0.332751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>slope</td>\n",
+       "      <td>0.117415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>ca</td>\n",
+       "      <td>0.483341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>thal</td>\n",
+       "      <td>0.418061</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Feature  Coefficient\n",
+       "0        age     0.054013\n",
+       "1        sex     0.329586\n",
+       "2         cp     0.324235\n",
+       "3   trestbps     0.175039\n",
+       "4       chol     0.054157\n",
+       "5        fbs    -0.140907\n",
+       "6    restecg     0.139418\n",
+       "7    thalach    -0.281434\n",
+       "8      exang     0.275582\n",
+       "9    oldpeak     0.332751\n",
+       "10     slope     0.117415\n",
+       "11        ca     0.483341\n",
+       "12      thal     0.418061"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({'Feature': X_train.columns, 'Coefficient': m_enet.coef_.reshape(len(X_train.columns))})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0f93994-e4b3-4ef3-9d04-a603aae1ee94",
+   "metadata": {},
+   "source": [
+    "We can see that the variables that influence the classifier the most are those with the largest coefficient magnitudes. The top three would be number of vessels, thalassemia, and ST depression at peak exercise. Surpringly, age and chol don't appear to influence the model significantly. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceec210e-2f67-456a-ab74-654d8a3453a7",
+   "metadata": {},
+   "source": [
+    "16. We established what should be implemented and how it should be done for each question together. Just to make sure we're on the same page. Then for the implementation, Saul worked on questions 1-8 and Fanny worked on questions 9-14. Then we committed our respective portions to github. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fbd5e6b-2bdc-44af-8d98-eab0118cd63f",
+   "metadata": {},
+   "source": [
+    "17. Link to the public GitHub repository. \n",
+    "   \n",
+    "https://github.com/SaulWidrich/A6-G49"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b045cfa-9a48-4302-99e0-0772eddf177b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
