--- a/Final-project.ipynb
+++ b/Final-project.ipynb
@@ -5,29 +5,24 @@
    "id": "4844c093-98c5-48b0-a68a-b9108991e325",
    "metadata": {},
    "source": [
-    "--\n",
-    "title: STATS 3DA3\n",
-    "subtitle: Homework Assignment 3\n",
-    "author: \n",
-    "- \"Saul Widrich: 400313351\"\n",
-    "- \"Fanny Akselrod: 400318118\"\n",
-    "date: 02/28/2025\n",
+    "---\n",
     "format: pdf\n",
-    "header-includes:\n",
-    "   - \\usepackage{amsmath}\n",
-    "   - \\usepackage{bbm}\n",
-    "   - \\usepackage{array}\n",
-    "   - \\usepackage{multirow}\n",
-    "   - \\usepackage{graphicx}\n",
-    "   - \\usepackage{float}\n",
-    "   - \\usepackage{apacite}\n",
-    "   - \\usepackage{natbib}\n",
-    "execute: \n",
-    "  echo: true\n",
     "fontsize: 11pt\n",
-    "geometry: margin = 1in\n",
+    "geometry: margin=1in\n",
     "linestretch: 1.5\n",
-    "---"
+    "---\n",
+    "\\begin{titlepage}\n",
+    "  \\centering\n",
+    "  \\vspace*{\\fill}\n",
+    "\n",
+    "  Assignment 6\n",
+    "\n",
+    "  Saul Widrich – 400313351\n",
+    "\n",
+    "  Fanny Akselrod – 400318118\n",
+    "\n",
+    "  \\vspace*{\\fill}\n",
+    "\\end{titlepage}"
    ]
   },
   {
