fixed title page

--- a/Final-project.ipynb
+++ b/Final-project.ipynb
@@ -3,26 +3,41 @@
   {
    "cell_type": "raw",
    "id": "4844c093-98c5-48b0-a68a-b9108991e325",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
+    "title: STATS 3DA3\n",
+    "subtitle: Homework Assignment 6\n",
+    "author: \"Saul Widrich: 400313351 and Fanny Akselrod – 400318118\"\n",
+    "date: 04/16/2025\n",
     "format: pdf\n",
+    "header-includes:\n",
+    "   - \\usepackage{amsmath}\n",
+    "   - \\usepackage{bbm}\n",
+    "   - \\usepackage{array}\n",
+    "   - \\usepackage{multirow}\n",
+    "   - \\usepackage{graphicx}\n",
+    "   - \\usepackage{float}\n",
+    "   - \\usepackage{apacite}\n",
+    "   - \\usepackage{natbib}\n",
+    "execute: \n",
+    "  echo: true\n",
     "fontsize: 11pt\n",
-    "geometry: margin=1in\n",
+    "geometry: margin = 1in\n",
     "linestretch: 1.5\n",
-    "---\n",
-    "\\begin{titlepage}\n",
-    "  \\centering\n",
-    "  \\vspace*{\\fill}\n",
-    "\n",
-    "  Assignment 6\n",
-    "\n",
-    "  Saul Widrich – 400313351\n",
-    "\n",
-    "  Fanny Akselrod – 400318118\n",
-    "\n",
-    "  \\vspace*{\\fill}\n",
-    "\\end{titlepage}"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db85cbc2",
+   "metadata": {},
+   "source": [
+    "\\newpage"
    ]
   },
   {
